0.4.4 - work in progress
- Feature: Display event date to the event details in mod1. Sort seminars in mod1 by date. Added data structures for registration lists (#0001884, #0001875)
- Feature: add fields for lodging and food to the registration form (#0003366)
- Fix: bug in notification mail (#0003420)
- Fix: reliably catch wrong seminar UIDs in the piVars plus some cleanup (#0002700)
- Polish the BE flexforms localized strings (#0003280)
- Feature: Added "My events" content type. (#0001710)
- Fix: Correctly display open-ended events. Also consider events without a begin date to take place in the future. (#0001995)
- Made tx_seminars_objectfromdb also work with JOIN queries (#0003194)
- Fix: Hide the number of vacancies for canceled events and change the CSS class for TR with canceled seminars from .tx-seminars-pi1-cancelled to .tx-seminars-pi1-canceled (#0003270)
- Feature: Added the new backend module base to work on (#0002002)
- Feature: Added configuration for setting the default order in list view (#0002011)
- Changed alignment of field uid in list view (#0003221)
- Feature: Only show exact vacancies if the number is below a configurable threshold (#0003067)
- Code cleanup and refactoring (#0003186, #0003187, #0003204, #0003205, #0003272, #0003276, #0003583)
- Fix: No output if used together with the extension sb_accessiblecontent (#0003127)
- Feature: Added configuration to hide canceled events in the list view (#0002013)
- Added the number of registered seats to the confirmation e-mail (#0001844)
- Feature: Added configuration for showing detailed location information in single view (#0001999)
- Feature: When a user signs up for an event, set crdate and tstamp for the registration and update tstamp for the seminar. Original patch by Roman Benz. (#0003036)
- Fix: Repaired the feature of selecting the CSS file from flexform (#0002825)
- Fix: Added support for selecting the template file from Flexform (which wasn't working before) (#0002715)