@@ -25,6 +25,10 @@
 										<numIndex index="0">LLL:EXT:seminars/pi1/locallang.php:seminars.pi_flexform.seminar_registration</numIndex>
 										<numIndex index="1">seminar_registration</numIndex>
 									</numIndex>
+									<numIndex index="3" type="array">
+										<numIndex index="0">LLL:EXT:seminars/pi1/locallang.php:seminars.pi_flexform.list_registrations</numIndex>
+										<numIndex index="1">list_registrations</numIndex>
+									</numIndex>
 								</items>
 								<size>1</size>
 								<maxitems>1</maxitems>
@@ -86,6 +90,21 @@
 							</config>
 						</TCEforms>
 					</loginPID>
+					<registrationsListPID>
+						<TCEforms>
+							<exclude>1</exclude>
+							<label>LLL:EXT:seminars/pi1/locallang.php:seminars.pi_flexform.registrationsListPID</label>
+							<config>
+								<type>group</type>
+								<internal_type>db</internal_type>
+								<allowed>pages</allowed>
+								<size>1</size>
+								<maxitems>1</maxitems>
+								<minitems>0</minitems>
+								<show_thumbs>1</show_thumbs>
+							</config>
+						</TCEforms>
+					</registrationsListPID>
 					<salutation>
 						<TCEforms>
 							<exclude>1</exclude>
