@@ -15,10 +15,12 @@
 			<label index="seminars.pi_flexform.seminar_list">Event List</label>
 			<label index="seminars.pi_flexform.my_events">My Events</label>
 			<label index="seminars.pi_flexform.seminar_registration">Event Registration</label>
+			<label index="seminars.pi_flexform.list_registrations">List of Registrations</label>
 			<label index="seminars.pi_flexform.baseURL">Base URL of this Typo3 site, e.g. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Page that contains the seminar list:</label>
-			<label index="seminars.pi_flexform.loginPID">Page that contains the login form:</label>
 			<label index="seminars.pi_flexform.registerPID">Page that contains the event registration form:</label>
+			<label index="seminars.pi_flexform.loginPID">Page that contains the login form:</label>
+			<label index="seminars.pi_flexform.registrationsListPID">Page that contains the list of registrations:</label>
 			<label index="seminars.pi_flexform.salutation">Salutation mode on the page:</label>
 			<label index="seminars.pi_flexform.formal">formal</label>
 			<label index="seminars.pi_flexform.informal">informal</label>
@@ -65,16 +67,19 @@
 			<label index="label_vacancies">Vacancies</label>
 			<label index="label_deadline_registration">Deadline for registration</label>
 			<label index="label_registration">Registration</label>
-			<label index="label_back">Back to listing</label>
 			<label index="label_onlineRegistration">Register online</label>
+			<label index="label_listRegistrationsLink">View the list of registrations for this event</label>
+			<label index="label_back">Back to listing</label>
 			<label index="label_registrationForm">Registration data</label>
 			<label index="label_thankyou_formal">Thank you for your registration. A confirmation e-mail has been sent. We are looking forward to your attendance.</label>
 			<label index="label_thankyou_informal">Thank you for your registration. A confirmation e-mail has been sent. We are looking forward to your attendance.</label>
+			<label index="label_list_registrations">List of registrations</label>
 			<label index="message_wrongSeminarNumber_formal">There is no event with this number. If you get this error message using a link on this page, please notify the webmaster. Thank you!</label>
 			<label index="message_wrongSeminarNumber_informal">There is no event with this number. If you get this error message using a link on this page, please notify the webmaster. Thank you!</label>
 			<label index="message_noResults">Sorry, currently no events could be found.</label>
 			<label index="message_registrationForm_formal">If you like, you can enter some data for your registration here:</label>
 			<label index="message_registrationForm_informal">If you like, you can enter some data for your registration here:</label>
+			<label index="message_noRegistrations">For this event, there are no registrations yet.</label>
 		</languageKey>
 		<languageKey index="dk" type="array">
 			<label index="pi_list_browseresults_prev">&lt; Forrige</label>
@@ -91,10 +96,12 @@
 			<label index="seminars.pi_flexform.seminar_list">Veranstaltungsliste</label>
 			<label index="seminars.pi_flexform.my_events">Meine Veranstaltungen</label>
 			<label index="seminars.pi_flexform.seminar_registration">Veranstaltungsanmeldung</label>
+			<label index="seminars.pi_flexform.list_registrations">Liste der Anmeldungen</label>
 			<label index="seminars.pi_flexform.baseURL">Basis-URL dieser Typo3-Site, z.B. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Seite mit der Seminarliste:</label>
-			<label index="seminars.pi_flexform.loginPID">Seite mit dem Login-Formular:</label>
 			<label index="seminars.pi_flexform.registerPID">Seite mit der Seminaranmeldung:</label>
+			<label index="seminars.pi_flexform.loginPID">Seite mit dem Login-Formular:</label>
+			<label index="seminars.pi_flexform.registrationsListPID">Seite mit der Liste der Anmeldungen:</label>
 			<label index="seminars.pi_flexform.salutation">Anredeform auf der Seite:</label>
 			<label index="seminars.pi_flexform.formal">formell</label>
 			<label index="seminars.pi_flexform.informal">informell</label>
@@ -141,16 +148,19 @@
 			<label index="label_vacancies">Freie Plätze</label>
 			<label index="label_deadline_registration">Anmeldeschluss</label>
 			<label index="label_registration">Anmeldung</label>
-			<label index="label_back">Zur Übersicht</label>
 			<label index="label_onlineRegistration">Online anmelden</label>
+			<label index="label_listRegistrationsLink">Liste der Anmeldungen für diese Veranstaltung anzeigen</label>
+			<label index="label_back">Zur Übersicht</label>
 			<label index="label_registrationForm">Anmeldedaten</label>
 			<label index="label_thankyou_formal">Vielen Dank für Ihre Anmeldung! Eine E-Mail mit der Anmeldebestätigung ist unterwegs. Wir freuen uns auf Sie und wünschen Ihnen viel Erfolg bei der Veranstaltung.</label>
 			<label index="label_thankyou_informal">Vielen Dank für deine Anmeldung! Eine E-Mail mit der Anmeldebestätigung ist unterwegs. Wir freuen uns auf dich und wünschen dir viel Erfolg bei der Veranstaltung.</label>
+			<label index="label_list_registrations">Liste der Anmeldungen</label>
 			<label index="message_wrongSeminarNumber_formal">Eine Veranstaltung mit dieser Nummer existiert nicht. Wenn Sie diese Fehlermeldung durch einen Link auf unserer Seite bekommen haben, benachrichtigen Sie bitte den Webmaster. Vielen Dank!</label>
 			<label index="message_wrongSeminarNumber_informal">Ein Veranstaltung mit dieser Nummer existiert nicht. Wenn du diese Fehlermeldung durch einen Link auf unserer Seite bekommen hast, benachrichtige bitte den Webmaster. Vielen Dank!</label>
 			<label index="message_noResults">Momentan konnten leider keine Veranstaltungen gefunden werden.</label>
 			<label index="message_registrationForm_formal">Wenn Sie möchten, können Sie hier noch ein paar Daten zu Ihrer Anmeldung eintragen:</label>
 			<label index="message_registrationForm_informal">Wenn du möchtest, kannst du hier noch ein paar Daten zu deiner Anmeldung eintragen:</label>
+			<label index="message_noRegistrations">Für diese Veranstaltung liegen bisher noch keine Anmeldungen vor.</label>
 		</languageKey>
 		<languageKey index="no" type="array">
 		</languageKey>
@@ -169,8 +179,8 @@
 			<label index="seminars.pi_flexform.seminar_registration">Seminar registratie</label>
 			<label index="seminars.pi_flexform.baseURL">Basis URL van deze Typo3 site, bijv. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Pagina die de seminarlijst bevat:</label>
-			<label index="seminars.pi_flexform.loginPID">Pagina die het inlogformulier bevat:</label>
 			<label index="seminars.pi_flexform.registerPID">Pagina die het registratieformulier van de bijeenkomst bevat:</label>
+			<label index="seminars.pi_flexform.loginPID">Pagina die het inlogformulier bevat:</label>
 			<label index="seminars.pi_flexform.salutation">Begroetingswijze op de pagina:</label>
 			<label index="seminars.pi_flexform.formal">formeel</label>
 			<label index="seminars.pi_flexform.informal">informeel</label>
@@ -211,8 +221,8 @@
 			<label index="label_vacancies">Plaatsen</label>
 			<label index="label_deadline_registration">Sluitingsdatum voor registratie</label>
 			<label index="label_registration">Registratie</label>
-			<label index="label_back">Terug naar overzicht</label>
 			<label index="label_onlineRegistration">Online registratie</label>
+			<label index="label_back">Terug naar overzicht</label>
 			<label index="label_registrationForm">Registratiegegevens</label>
 			<label index="label_thankyou_formal">Dank voor uw registratie. Een bevestigings e-mail is naar u toegezonden. We verheugen ons in uw belangstelling.</label>
 			<label index="label_thankyou_informal">Bedankt voor je registratie! Een e-mail met de registratiebevestiging is naar jou onderweg. Wij verheugen ons op jouw komst en wensen je veel succes bij de bijeenkomst.</label>
@@ -303,10 +313,12 @@
 			<label index="seminars.pi_flexform.seminar_list" type="integer">98496595</label>
 			<label index="seminars.pi_flexform.my_events" type="integer">25497076</label>
 			<label index="seminars.pi_flexform.seminar_registration" type="integer">146873320</label>
+			<label index="seminars.pi_flexform.list_registrations" type="integer">154622240</label>
 			<label index="seminars.pi_flexform.baseURL" type="integer">34786539</label>
 			<label index="seminars.pi_flexform.listPID" type="integer">227592545</label>
-			<label index="seminars.pi_flexform.loginPID" type="integer">140600031</label>
 			<label index="seminars.pi_flexform.registerPID" type="integer">266659950</label>
+			<label index="seminars.pi_flexform.loginPID" type="integer">140600031</label>
+			<label index="seminars.pi_flexform.registrationsListPID" type="integer">154591584</label>
 			<label index="seminars.pi_flexform.salutation" type="integer">166511775</label>
 			<label index="seminars.pi_flexform.formal" type="integer">211667739</label>
 			<label index="seminars.pi_flexform.informal" type="integer">63642221</label>
@@ -325,6 +337,9 @@
 			<label index="seminars.pi_flexform.generalPriceInList" type="integer">150285299</label>
 			<label index="seminars.pi_flexform.generalPriceInSingle" type="integer">30481588</label>
 			<label index="seminars.pi_flexform.showRegistrationFields" type="integer">128589369</label>
+			<label index="seminars.pi_flexform.showSpeakerDetails" type="integer">55116366</label>
+			<label index="seminars.pi_flexform.showSiteDetails" type="integer">28251281</label>
+			<label index="seminars.pi_flexform.hideCanceledEvents" type="integer">201114697</label>
 			<label index="pi_list_browseresults_prev" type="integer">20121992</label>
 			<label index="pi_list_browseresults_page" type="integer">26464201</label>
 			<label index="pi_list_browseresults_next" type="integer">232350798</label>
@@ -351,19 +366,19 @@
 			<label index="label_deadline_registration" type="integer">106717060</label>
 			<label index="label_registration" type="integer">16354175</label>
 			<label index="label_onlineRegistration" type="integer">20392011</label>
+			<label index="label_listRegistrationsLink" type="integer">82939238</label>
 			<label index="label_back" type="integer">168615651</label>
 			<label index="label_registrationForm" type="integer">236130017</label>
 			<label index="label_thankyou_formal" type="integer">235938949</label>
 			<label index="label_thankyou_informal" type="integer">235938949</label>
+			<label index="label_list_registrations" type="integer">206095824</label>
 			<label index="message_wrongSeminarNumber_formal" type="integer">103788042</label>
 			<label index="message_wrongSeminarNumber_informal" type="integer">103788042</label>
 			<label index="message_noResults" type="integer">15777293</label>
 			<label index="message_registrationForm" type="integer">194008229</label>
 			<label index="message_registrationForm_informal" type="integer">194008229</label>
 			<label index="message_registrationForm_formal" type="integer">194008229</label>
-			<label index="seminars.pi_flexform.showSpeakerDetails" type="integer">55116366</label>
-			<label index="seminars.pi_flexform.showSiteDetails" type="integer">28251281</label>
-			<label index="seminars.pi_flexform.hideCanceledEvents" type="integer">201114697</label>
+			<label index="message_noRegistrations" type="integer">261689699</label>
 		</languageKey>
 		<languageKey index="no" type="array">
 		</languageKey>
@@ -382,8 +397,8 @@
 			<label index="seminars.pi_flexform.seminar_registration" type="integer">250098610</label>
 			<label index="seminars.pi_flexform.baseURL" type="integer">34786539</label>
 			<label index="seminars.pi_flexform.listPID" type="integer">227592545</label>
-			<label index="seminars.pi_flexform.loginPID" type="integer">140600031</label>
 			<label index="seminars.pi_flexform.registerPID" type="integer">266659950</label>
+			<label index="seminars.pi_flexform.loginPID" type="integer">140600031</label>
 			<label index="seminars.pi_flexform.salutation" type="integer">166511775</label>
 			<label index="seminars.pi_flexform.formal" type="integer">211667739</label>
 			<label index="seminars.pi_flexform.informal" type="integer">63642221</label>
@@ -424,8 +439,8 @@
 			<label index="label_vacancies" type="integer">99017107</label>
 			<label index="label_deadline_registration" type="integer">106717060</label>
 			<label index="label_registration" type="integer">16354175</label>
-			<label index="label_back" type="integer">168615651</label>
 			<label index="label_onlineRegistration" type="integer">20392011</label>
+			<label index="label_back" type="integer">168615651</label>
 			<label index="label_registrationForm" type="integer">236130017</label>
 			<label index="label_thankyou_formal" type="integer">235938949</label>
 			<label index="label_thankyou_informal" type="integer">235938949</label>
