@@ -96,7 +96,10 @@
 <!--###FIELD_WRAPPER_DEADLINE_REGISTRATION### --><!--###FIELD_WRAPPER_REGISTRATION### --><h3>###LABEL_REGISTRATION###</h3>
 <p>###REGISTRATION###</p>
 
-<!--###FIELD_WRAPPER_REGISTRATION### --><!--###FIELD_WRAPPER_BACK### --><hr />
+<!--###FIELD_WRAPPER_REGISTRATION### --><!--###FIELD_WRAPPER_LIST_REGISTRATIONS### --><h3>###LABEL_LIST_REGISTRATIONS###</h3>
+<p>###LIST_REGISTRATIONS###</p>
+
+<!--###FIELD_WRAPPER_LIST_REGISTRATIONS### --><!--###FIELD_WRAPPER_BACK### --><hr />
 
 <p>###BACKLINK###</p>
 
@@ -133,3 +136,18 @@
 <!--###REGISTRATION_THANKYOU### -->
 <p>###LABEL_THANKYOU###</p>
 <!--###REGISTRATION_THANKYOU### -->
+
+
+<!--###REGISTRATIONS_LIST_VIEW### -->
+<h1>###LABEL_LIST_REGISTRATIONS###: ###TITLE###</h1>
+<!--###WRAPPER_ERROR### --><p ###CLASS_ERROR###>###ERROR_TEXT###</p>
+
+<!--###WRAPPER_ERROR### --><!--###WRAPPER_REGISTRATIONS_LIST_MESSAGE### -->
+<p>###MESSAGE_NO_REGISTRATIONS###</p>
+<!--###WRAPPER_REGISTRATIONS_LIST_MESSAGE### --><!--###WRAPPER_REGISTRATIONS_LIST_BODY### -->
+<ol>
+###REGISTRATIONS_LIST_BODY###</ol>
+<!--###WRAPPER_REGISTRATIONS_LIST_BODY### --><!--###REGISTRATIONS_LIST_VIEW### -->
+
+<!--###REGISTRATIONS_LIST_ITEM### -->  <li>###REGISTRATIONS_LIST_INNERITEM###</li>
+<!--###REGISTRATIONS_LIST_ITEM### -->
